--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_BASE_URL_LOCAL=http://localhost:8000/api
-VITE_API_BASE_URL_DEPLOY=https://calorie-tracker-app.onrender.com/api
+VITE_API_BASE_URL_LOCAL = 'http://localhost:8000/api'
+VITE_API_BASE_URL_DEPLOY = 'https://calorie-tracker-app.onrender.com/api'
 
 # # API base URL for your Django backend
 # VITE_API_BASE=http://localhost:8000/api
